<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuPrincipal"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/exo_2_semibold"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/bt_cultura"
            android:layout_width="152dp"
            android:layout_height="138dp"
            android:background="@drawable/bt_menu_inicial"
            android:drawableTop="@drawable/cultura"
            android:text="@string/botaoCultura"
            android:textSize="15sp"
            android:fontFamily="@font/exo_2"
            android:textColor="#000000"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/bt_talhão"
            android:layout_width="152dp"
            android:layout_height="138dp"
            android:background="@drawable/bt_menu_inicial"
            android:drawableTop="@drawable/talhao"
            android:text="@string/botaoTalhao"
            android:textSize="15sp"
            android:fontFamily="@font/exo_2"
            android:textColor="#000000" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/bt_insumo"
            android:layout_width="152dp"
            android:layout_height="138dp"
            android:background="@drawable/bt_menu_inicial"
            android:drawableTop="@drawable/insumo"
            android:text="@string/botaoInsumo"
            android:textSize="15sp"
            android:fontFamily="@font/exo_2"
            android:textColor="#000000"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/bt_plantacao"
            android:layout_width="152dp"
            android:layout_height="138dp"
            android:background="@drawable/bt_menu_inicial"
            android:drawableTop="@drawable/plantacao"
            android:text="@string/botaoPlantacao"
            android:textSize="15sp"
            android:fontFamily="@font/exo_2"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <Button
        android:id="@+id/bt_colheita"
        android:layout_width="152dp"
        android:layout_height="138dp"
        android:background="@drawable/bt_menu_inicial"
        android:drawableTop="@drawable/colheita"
        android:text="@string/botaoColheita"
        android:textSize="15sp"
        android:fontFamily="@font/exo_2"
        android:textColor="#000000"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/bt_leilao"
            android:layout_width="152dp"
            android:layout_height="138dp"
            android:background="@drawable/bt_menu_inicial"
            android:drawableTop="@drawable/leilao"
            android:text="@string/botaoLeilao"
            android:textSize="15sp"
            android:fontFamily="@font/exo_2"
            android:textColor="#000000"/>

    </LinearLayout>

    </LinearLayout>

</ScrollView>