<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlog"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/logotech"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/exo_2_semibold"
            android:text="@string/loginTextoPrincipal"
            android:textColor="#000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/exo_2_semibold"
            android:text="@string/loginEmail"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputboard"
            android:fontFamily="@font/exo_2"
            android:hint="@string/loginInputE"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="#000"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/exo_2_semibold"
            android:text="@string/loginSenha"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputboard"
            android:fontFamily="@font/exo_2"
            android:hint="@string/loginInputS"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/btncadastrar"
            android:text="@string/loginBotao"
            android:textColor="#FFF" />

    </LinearLayout>

</ScrollView>