<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityTipoUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/faixa_ou"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:background="@drawable/faixa"
            android:theme="@style/AppTheme"
            android:layout_marginBottom="80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoUsuarioTextoPrincipal"
            android:fontFamily="@font/exo_2_semibold"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp" />

        <Button
            android:id="@+id/bt_gerenciar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/tipoUsuario1"
            android:textColor="#FFF"
            android:fontFamily="@font/exo_2"
            android:background="@drawable/btncadastrar"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"/>

        <Button
            android:id="@+id/bt_ger_lei"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/tipoUsuario2"
            android:textColor="#FFF"
            android:fontFamily="@font/exo_2"
            android:background="@drawable/btncadastrar"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"/>

        <Button
            android:id="@+id/bt_leiloar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/tipoUsuario3"
            android:textColor="#FFF"
            android:fontFamily="@font/exo_2"
            android:background="@drawable/btncadastrar"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"/>

        <Button
            android:id="@+id/bt_negociar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/tipoUsuario4"
            android:textColor="#FFF"
            android:fontFamily="@font/exo_2"
            android:background="@drawable/btncadastrar"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>
</ScrollView>