<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityCadastroSenha"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/faixa"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/faixa"
        android:theme="@style/AppTheme"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senhaTextoPrincipal"
        android:textSize="20sp"
        android:fontFamily="@font/exo_2_semibold"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senhaCriar"
        android:textSize="15sp"
        android:fontFamily="@font/exo_2_semibold"
        android:textColor="#000"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/input_cadastro_senha"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:background="@drawable/inputboard"
        android:hint="@string/senhainput"
        android:fontFamily="@font/exo_2"
        android:inputType="textPassword"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senhaConfirmar"
        android:textSize="15sp"
        android:fontFamily="@font/exo_2_semibold"
        android:textColor="#000"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/input_confirma_senha"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:background="@drawable/inputboard"
        android:hint="@string/senhainput"
        android:fontFamily="@font/exo_2"
        android:inputType="textPassword"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/bt_validarSenha"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/senhaFinalizar"
        android:background="@drawable/btncadastrar"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/exo_2"
        android:textColor="#FFF"/>


</LinearLayout>