<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityInfoResidencia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/faixa"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/faixa"
            android:theme="@style/AppTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/exo_2_semibold"
            android:text="@string/residenciaTextoPrincipal"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/residenciaTextoSecundario"
            android:textColor="#000"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/residenciaCEP"
            android:textColor="#000"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/input_cep_usuario"
            android:layout_width="225dp"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputboard"
            android:fontFamily="@font/exo_2"
            android:hint="@string/inputPadrão"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/residenciaRua"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_rua_usuario"
            android:layout_width="225dp"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputboard"
            android:fontFamily="@font/exo_2"
            android:hint="@string/inputPadrão"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/residenciaBairro"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_bairro_usuario"
            android:layout_width="225dp"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputboard"
            android:fontFamily="@font/exo_2"
            android:hint="@string/inputPadrão"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/residenciaCidade"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_cidade_usuario"
            android:layout_width="225dp"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputboard"
            android:fontFamily="@font/exo_2"
            android:hint="@string/inputPadrão"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/residenciaEstado"
            android:textColor="#000"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/input_estado_usuario"
            android:layout_width="225dp"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputboard"
            android:fontFamily="@font/exo_2"
            android:hint="@string/inputPadrão"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/residenciaPais"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_pais_usuario"
            android:layout_width="225dp"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputboard"
            android:fontFamily="@font/exo_2"
            android:hint="@string/inputPadrão"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_prox"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/seta2"
                android:fontFamily="@font/exo_2" />

            <Button
                android:id="@+id/bt_ant"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="125dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/seta" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>